fixing bad visibility for long tasks on phones

--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -17,6 +17,10 @@
     display: none;
 }
 
+.tasks__content{
+    word-wrap: break-word;
+    overflow: hidden;
+}
 .tasks__content--done {
     text-decoration: line-through;
 }
